# hackathon2-Phase1

./: README.md  demo_ui.py  main.py  pyproject.toml  refactored_main.py
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-initial-constitution.constitution.prompt.md
history/prompts/todo-app/: 1-create-todo-app-spec.spec.prompt.md  2-create-impl-plan.plan.prompt.md  3-create-task-list.tasks.prompt.md  4-implement-todo-app.red.prompt.md  5-enhance-cli-ui.green.prompt.md
specs/1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-app/checklists/: requirements.md
specs/1-todo-app/contracts/: cli-interface.md
src/: main.py
src/todo_app/: __init__.py
src/todo_app/cli/: __init__.py  cli_interface.py
src/todo_app/models/: __init__.py  todo.py
src/todo_app/services/: __init__.py  todo_manager.py
